src/css/imports/_navigation-collapsible.css
/* NAV WRAPPER */
/* <nav> element that wraps our navigation. */

.nav-collapsible {

  position: fixed;
  overflow: hidden; /* [1] */
  display: block;
  width: 100%;
  height:55px;
  top: 0;
  z-index:150;
  margin-bottom: -80px;
  box-shadow: 0 2px 3px rgba(0,0,0,.4);

  @media (--breakpoint-not-small) {
    display: flex;
    height: 79px;
  }

}

/* Class added via JS when toggled open */
.nav-collapsible_open {
  overflow: visible; /* allow dropdown to be seen */
}

/*  NAV LIST */
.nav-collapsible ul {
  background-color: var(--black);

  /* Remove background */
  @media (--breakpoint-not-small) {
    background: none;
  }

}

/* Hide nav by default only when JS is running and viewport is less than 40em, see also: custom media-query in `_media-queries.css` */
/* The wrapper has 'overflow: hidden;' which hides it. */
.js .nav-collapsible ul {
  @media (--breakpoint-small) {
    display: block;
    position: absolute;
    z-index: 2;
    width: 100%;
  }
}

/* Animation to slide the navbar down */
.js .nav-collapsible_show {
    -webkit-transition:top 200ms ease;
    -moz-transition:top 200ms ease;
    -o-transition:top 200ms ease;
    transition:top 200ms ease;
}

/* NAV LIST ITEMS */

.nav-collapsible ul li {
  border-top: 1px solid #000;

  /* Change from stacked to display in a row */
  @media (--breakpoint-not-small) {
    display: inline-block;
    border-top: none; /* separator no longer needed */
  }

}

.nav-collapsible ul li > a {

  @media (--breakpoint-small) {
    color: var(--white);
    display: block;
    white-space: nowrap;
    padding-left: var(--spacing-medium);
    padding-right: var(--spacing-medium);
    line-height: var(--spacing-large);
  }

}

.nav-collapsible ul .nav_current > a {
  @media (--breakpoint-small) {
    background-color: var(--primary);
  }
}

/* make room for toggle button */
/* override `display: block` on logo wrap link */
.nav-collapsible > a[href="/"] {
  @media (--breakpoint-small) {
    display: inline-block;
  }
}

/* TOGGLE BUTTON */
/* button element which toggles the nav. */
.nav-collapsible_toggle {

  display: none;
  color: var(--white);
  white-space: nowrap;
  padding-right: 1.33335rem;
  padding-left: 1.33335rem;
  line-height: 2.66667;

  float: right;
  margin-top: .25rem;
  margin-right: .375rem;
  background: var(--primary);
  min-width: 2.66667rem;
  min-height: 2.66667rem;
  border-radius: .25rem;
  box-sizing: border-box;
  background-repeat: no-repeat;
  background-position: center center;
  position: relative;
  z-index: 2;


}

.js .nav-collapsible_toggle {
  /* only show button if and when javaScript has kicked in, see also: `src/js/nav-collapsible.js` */
  display: block;

  /* Now hide the toggle button as menu show by default */
  @media (--breakpoint-not-small) {
    display: none;
  }
}

.nav-collapsible .menu-icon-open {
  background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='12' viewBox='0 0 16 12'%3E%3Crect fill='white' width='16' height='2'/%3E%3Crect fill='white' y='5' width='16' height='2'/%3E%3Crect fill='white' y='10' width='16' height='2'/%3E%3C/svg%3E");
}

.nav-collapsible_toggle .menu-icon-close {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12px' height='12px' viewBox='0 0 12 12'%3E%3Cpath fill='white' d='M1.562,0.046l4.336,4.426l4.336-4.426l1.461,1.506L7.381,5.955l4.313,4.403l-1.483,1.504L5.897,7.46l-4.313,4.402 l-1.482-1.504l4.313-4.403L0.102,1.552L1.562,0.046z'/%3E%3C/svg%3E");
  background-size: 20%;
  opacity: 0;
}

.nav-collapsible_toggle [class^="menu-icon-"] {
  position: absolute;
  top: 0;
  right: 0;
  bottom:0;
  left:0;
  background-repeat: no-repeat;
  background-position: center;
  transition: all .25s ease-in;
}

/* Menu open styles */
/* Change hamburger icon to a close icon */
.nav-collapsible_open .menu-icon-open {
  opacity: 0;
}

/* Change hamburger icon to a close icon */
.nav-collapsible_open .menu-icon-close {
  background-size: 33.33335%;
  opacity: 1;
} 

